# plop-mario-wasm

./: .env  1.bootstrap.js  Cargo.toml  bootstrap.js  index.html  justfile  package-lock.json
assets/: config.json
assets/levels/: 1-1.json  1-2.json
assets/musics/: overworld.json  underworld.json
assets/sounds/: mario.json
assets/sprites/: bullet.json  cannon.json  goomba.json  koopa.json  luigi.json  mario.json  overworld.json  underworld.json
src/: assets.rs  camera.rs  canvas.rs  compositor.rs  events.rs  game.rs  input.rs  keyboard.rs  level.rs  levels.rs  lib.rs  system.rs  timer.rs  utils.rs
src/assets/: animations.rs  config.rs  font.rs  levels.rs  mod.rs  patterns.rs  sprites.rs  tiles.rs
src/assets/audio/: mod.rs  musics.rs  sounds.rs
src/audio/: mod.rs  musics.rs  player.rs  sounds.rs
src/entity/: animation.rs  bullet.rs  cannon.rs  entity_display.rs  entity_drawable.rs  events.rs  goomba.rs  koopa.rs  mobs.rs  mod.rs  player.rs  player_env.rs  sprite.rs  traits.rs  trigger.rs
src/entity/traits/: bullet_behavior.rs  emitter.rs  go.rs  goomba_behavior.rs  gravity.rs  jump.rs  killable.rs  koopa_behavior.rs  level_timer.rs  mod.rs  physics.rs  player.rs  player_controller.rs  solid.rs  stomper.rs  trigger.rs  velocity.rs  walk.rs
src/layers/: animation.rs  backgrounds.rs  camera.rs  collision.rs  colors.rs  dashboard.rs  entity.rs  level.rs  mod.rs  player.rs  player_progress.rs  sprite.rs
src/physics/: bounding_box.rs  entity_collider.rs  go.rs  gravity_force.rs  jumping.rs  matrix.rs  mod.rs  motion.rs  position.rs  rectangle.rs  size.rs  tile_collider.rs  tile_resolver.rs  velocity.rs
src/scene/: level.rs  mod.rs  wait_scene.rs
tests/: web.rs
www/: bootstrap.js  index.html  package-lock.json  package.json  style.css  webpack.config.js
www/assets/: config.json
www/assets/levels/: 1-1.json  debug-coin.json  lvl_1-1.json
www/assets/musics/: overworld.json  underworld.json
www/assets/sounds/: cannon.json  goomba.json  mario.json
www/assets/sprites/: bullet.json  goomba.json  koopa.json  luigi.json  mario.json  overworld.json  underworld.json
www/levels/: lvl_1-1.json
www/src/: assets.js  index.js  render.js  timer.js
