[package]
name = "plop-mario-wasm"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"

console_error_panic_hook = { version = "0.1.1", optional = true }

wee_alloc = { version = "0.4.2", optional = true }

console_log="0.1"


[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version ="0.3"
features = [
    "CanvasRenderingContext2d",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "Window",

]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
