[package]
name = "plop-mario-wasm"
version = "0.1.0"
authors = ["igor <ilaborie@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }

wee_alloc = { version = "0.4", optional = true }

serde = {version = "1.0", features=["derive"]}

wasm-bindgen-futures = "0.4"
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]}

js-sys = "0.3"

[dependencies.web-sys]
version ="0.3"
features = [
    # Basic DOM
    "Window",
    "Document",
    "Element",
    "Node",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    # Drawing into a Canvas
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
    "HtmlImageElement",
    # Fetch
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    # Performance
    "Performance",
    # Audio
    "HtmlAudioElement",
    "HtmlMediaElement",
    "AudioContext",
    "AudioBuffer",
    "AudioNode",
    "GainNode",
    "AudioParam",
    "AudioBufferSourceNode",
    "AudioDestinationNode",
    "AddEventListenerOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
